--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,13 @@ a {
     line-height: 1.7;
     margin: 0; }
 
+  .vision-portrait {
+    border-radius: 1.75rem;
+    max-width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block; }
+
   .services-overview {
     background: transparent; }
 
